--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,13 +4,14 @@
 <div class="jumbotron centered">
   <div class="container">
     <i class="fas fa-key fa-6x"></i>
-    <h1 class="display-3">Secrets</h1>
-    <p class="lead">Don't keep your secrets, share them anonymously!</p>
+    <h1 class="display-3">Shareit<b>.</b></h1>
+    <p class="lead">Don't keep your secrets, share them anonymously and feel better!</p>
     <hr>
     <a class="btn btn-light btn-lg" href="/register" role="button">Register</a>
     <a class="btn btn-dark btn-lg" href="/login" role="button">Login</a>
 
   </div>
+  <a href="/how-it-works"></a>
 </div>
 
 <%- include('partials/footer') %>
